# aegir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: rust.yml
apps/bootstrap/: Cargo.toml
apps/bootstrap/src/: main.rs
apps/bootstrap/topology/: Cargo.toml
apps/bootstrap/topology/src/: failure.rs  full.rs  hypercube.rs  layout.rs  lib.rs  line.rs  mesh.rs  options.rs  star.rs  torus.rs  tree.rs
apps/circuit/: Cargo.toml  README.md
apps/circuit/src/: aig2waves.py  design.rs  design.v  design.ys  design_aig.json  design_stimulus.json  main.rs
apps/exchange/: Cargo.toml  README.md
apps/exchange/src/: exchange.rs  lib.rs  main.rs
apps/exchange/src/exchange/: center.rs  common.rs  logger.rs  trader.rs
apps/exchange/tests/: run_exchange.rs  simulate_exchange.rs  validate_exchange.rs
apps/kvstore/: Cargo.toml  README.md
apps/kvstore/src/: client.rs  lib.rs  main.rs  modes.rs  server.rs  store.rs
apps/life/: Cargo.toml
apps/life/src/: block.rs  lib.rs  main.rs
apps/nn_classifier/: Cargo.toml  README.md
apps/nn_classifier/scripts/: mnist_download.sh
apps/nn_classifier/src/: lib.rs  main.rs  mnist.rs  nn.rs
apps/nn_classifier/tf/: tf_mnist.py
apps/nn_classifier/tf/mnist_model/: mnist_weights.pickle
apps/packetnet/: Cargo.toml
apps/packetnet/src/: logging.rs  main.rs  packet_net.rs
apps/simple/: Cargo.toml
apps/simple/src/: main.rs
bits/bits/: Cargo.toml
bits/bits/src/: lib.rs
bits/bits_derive/: Cargo.toml
bits/bits_derive/src/: lib.rs
bits/bits_test/: Cargo.toml
bits/bits_test/src/: lib.rs
bits/schema/: Cargo.toml
bits/schema/src/: lib.rs
bits/schema_derive/: Cargo.toml
bits/schema_derive/src/: lib.rs
bits/schema_test/: Cargo.toml
bits/schema_test/src/: lib.rs
bits/with_checksum/: Cargo.toml
bits/with_checksum/src/: lib.rs
docs/: exchange-application.md  waves.md
platform/: Cargo.toml  README.md
platform/benches/: comm.rs  forward.rs
platform/src/: app.rs  bootstrap.rs  calendar.rs  error.rs  hw.rs  lib.rs  mailbox.rs  ports.rs  predefined.rs  scheduler.rs  sim.rs  specs.rs  vcd.rs
platform/src/hw/: compute.rs  config.rs  gather.rs  scatter.rs  switch.rs
platform/src/hw/topologies/: fat_tree.rs  full.rs  hypercube.rs  line.rs  mesh.rs  mod.rs  star.rs  torus.rs  tree.rs
platform/src/scheduler/: README.md  alloc.rs  path.rs  reservation.rs  sched.rs
platform/src/sim/: bittide_sim.rs
platform/src/specs/: link.rs  node.rs  system.rs  visitor.rs
tests/failures/: Cargo.toml
tests/failures/src/: frame_corruption.rs  main.rs  node_crash.rs
tests/multiapps/: Cargo.toml
tests/multiapps/src/: main.rs
tests/multifreq/: Cargo.toml
tests/multifreq/src/: main.rs
tests/one_to_one_network/: Cargo.toml
tests/one_to_one_network/src/: main.rs
tests/virtual_links/: Cargo.toml
tests/virtual_links/src/: main.rs
waves/: Cargo.toml  README.md
waves/src/: action.rs  action_fn.rs  lib.rs  link.rs  module.rs  util.rs
waves/tests/: action_frequency_factor.rs  broadcast.rs  lib.rs  link_framing_lead.rs  link_no_lead.rs  opt_in_array.rs  opt_out_array.rs  simple.rs  sum_array.rs  waves.rs
