[package]
name = "waves"
version = "0.2.0"
authors = ["sgrayson", "cascaval"]
edition = "2018"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.10"
syn = { version = "1.0.73", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.42"
bitvec = "1"
bits = { path = "../bits/bits" }
bits_derive = { path = "../bits/bits_derive" }
env_logger = "0.8.4"
log = "0.4.14"
platform = { path = "../platform" }
