[package]
name = "bootstrap"
version = "0.1.0"
authors = ["rgif"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bootstrap"
doc = false

[dependencies]
anyhow = "1.0.42"
bits = { path = "../../bits/bits" }
bits_derive = { path = "../../bits/bits_derive" }
bitvec = "1"
env_logger = "0.8.4"
itertools = "^0.10"
log = "0.4.14"
petgraph = "^0.6"
platform = { path = "../../platform" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
structopt = "^0.3"
waves = { path = "../../waves" }
topology = { path = "./topology/" }
rand = "0.8.4"
