[package]
name = "kvstore"
version = "0.1.0"
authors = ["cascaval"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvstore"
doc = false

[dependencies]
anyhow = "1.0.42"
bits = { path = "../../bits/bits" }
bits_derive = { path = "../../bits/bits_derive" }
bitvec = "1"
env_logger = "0.9"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.8"
platform = { path = "../../platform" }
rand = "0.8"
rand_pcg = "0.3.1"
structopt = "0.3"
waves = { path = "../../waves" }
