[package]
name = "life"
version = "0.1.0"
authors = ["chrispearce"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "life"
doc = false

[dependencies]
anyhow = "1.0.42"
bits = { path = "../../bits/bits" }
bits_derive = { path = "../../bits/bits_derive" }
with_checksum = { path = "../../bits/with_checksum" }
bitvec = "1"
env_logger = "0.9"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.8"
platform = { path = "../../platform" }
rand = "0.8"
structopt = "0.3"
waves = { path = "../../waves" }
