[package]
name = "nn_classifier"
version = "0.1.0"
authors = ["cascaval"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "nn_classifier"
doc = false

[dependencies]
anyhow = "1.0.42"
bits = { path = "../../bits/bits" }
bits_derive = { path = "../../bits/bits_derive" }
bitvec = "1"
env_logger = "0.8.4"
float-cmp = "0.9.0"
log = "0.4.14"
mnist = { version = "0.5.0" }
ndarray = "0.15.4"
platform = { path = "../../platform" }
rand = "0.8"
rand_pcg = "0.3.1"
rand_seeder = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
serde-pickle = "1.1.0"
waves = { path = "../../waves" }
