[package]
name = "schema_test"
version = "0.1.0"
authors = ["Reiner Pope <reinerp@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../schema" }
serde = { version = "1.0", features = ["derive"] }