[package]
name = "topology"
version = "0.6.0"
authors = ["Calin Cascaval <cascaval@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.9.0"
log = "^0.4"
mktemp="^0.4"
petgraph="^0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "^0.3"
which="^4.0"
